# embedded

./: README.md
AzureFunctions/: embedded.fsproj  functions.fs  metadata.json
AzureFunctions/Properties/: launchSettings.json
PiCam/: PiCam.fsproj  PiCam.sln  Program.fs
PiCam/Common/: Common.fsproj  PiCamCommon.fs
PiCam/PictureTaker/: AzureBlobUploader.fs  AzureFunctionInteractor.fs  NextOperation.fs  Orchestrator.fs  PictureTaker.fs  PictureTaker.fsproj  Program.fs
PiCam/SystemdWorker/: PiCamWorker.service  Program.fs  SystemdWorker.fsproj  Worker.fs
PiCam/SystemdWorker/Properties/: launchSettings.json
PiCam/Tests/: AzureBlobUploaderTests.fs  SerializationTests.fs  Tests.fsproj  TimeCalculationTests.fs
RustEsp32Stuff/: Cargo.toml
RustEsp32Stuff/src/: main.rs
